update shellcode and ROP module icons

--- a/dojo.yml
+++ b/dojo.yml
@@ -9,7 +9,7 @@ award:
 
 modules:
   - id: shellcode-injection
-    icon: Onix
+    icon: Abra
 
   - id: return-oriented-programming
-    icon: Geodude
+    icon: Kadabra
