--- a/return-oriented-programming/level-2-4/Makefile
+++ b/return-oriented-programming/level-2-4/Makefile
@@ -2,13 +2,14 @@ TARGET = return-oriented-programming-level2.4
 CC     = gcc
 CFLAGS = -Wall -Wextra -Werror
 SECFLAGS = -Wno-format-security
+INCLUDE = -I ../../include ../../include/util.c
 
 .PHONY: all clean
 
 all: $(TARGET)
 
 %: %.c
-	$(CC) $(CFLAGS) $(SECFLAGS) -o $@ $<
+	$(CC) $(CFLAGS) $(SECFLAGS) $(INCLUDE) -o $@ $<
 
 clean: 
 	rm -rf $(TARGET)
