adapt level-1-1, level-2-0 to aarch64 and compile

--- a/return-oriented-programming/level-1-1/Makefile
+++ b/return-oriented-programming/level-1-1/Makefile
@@ -1,7 +1,7 @@
 TARGET = return-oriented-programming-level1.1
 CC     = gcc
 CFLAGS = -Wall -Wextra -Werror
-SECFLAGS = -fno-stack-protector -no-pie -masm=intel
+SECFLAGS = -fno-stack-protector -no-pie
 INCLUDE = -I ../../include ../../include/util.c
 
 .PHONY: all clean
